# bachelorabeit

./: degree.py  greedy.py  loader.py  main.py  plot.py  reader.py  result.py
peaty-1.0.0/: .gitignore  CMakeLists.txt  README.md  bitset.h  colourer.cpp  colourer.h  fast_int_queue.h  graph.cpp  graph.h  graph_colour_solver.cpp  graph_colour_solver.h  int_stack_without_dups.h  make-pace-challenge-versions  params.h  result_003.txt  result_005.txt  result_007.txt  result_009.txt  result_011.txt  result_013.txt  result_015.txt  result_017.txt  result_019.txt  result_021.txt  result_023.txt  result_025.txt  result_027.txt  result_029.txt  result_031.txt  result_033.txt  result_035.txt  result_037.txt  result_039.txt  result_041.txt  result_043.txt  result_045.txt  result_047.txt  result_049.txt  result_051.txt  result_053.txt  (+75 more)
peaty-1.0.0/description/: .gitignore  peaty-description.tex  peaty.bib
peaty-1.0.0/public/: vc-exact_007.gr  vc-exact_017.gr  vc-exact_021.gr  vc-exact_023.gr  vc-exact_025.gr  vc-exact_031.gr  vc-exact_047.gr  vc-exact_049.gr  vc-exact_053.gr  vc-exact_071.gr  vc-exact_073.gr  vc-exact_095.gr  vc-exact_097.gr  vc-exact_099.gr  vc-exact_105.gr  vc-exact_107.gr  vc-exact_109.gr  vc-exact_111.gr  vc-exact_113.gr  vc-exact_117.gr  vc-exact_119.gr  vc-exact_135.gr  vc-exact_137.gr  vc-exact_155.gr  vc-exact_157.gr  vc-exact_161.gr  vc-exact_165.gr  vc-exact_169.gr  vc-exact_173.gr  vc-exact_175.gr  vc-exact_177.gr  vc-exact_191.gr
peaty-1.0.0/sample-instances/: vc-exact_001.hgr  vc-exact_003.hgr  vc-exact_005.hgr  vc-exact_007.hgr  vc-exact_009.hgr  (+5 more)
(+100 files in other folders)
